other/limit-hostpath-vols/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
      volumes:
      - name: empty
        emptyDir:
          medium: memory
          sizeLimit: 20Mi
      - name: foo
        hostPath:
          path: /data/junk
      - name: config-vol
        configMap:
          name: foo
          items:
            - key: foo
              path: bar
